# particle-life

./: .gitignore  CMakeLists.txt  README.md
docs/: controls-and-tuning.md  cuda-kernel-guide.md  overview.md  presentation-outline.md
include/: particle_life.hpp
src/: main.cpp  sim.cu
tools/: make_pdfs.py
